src2/objects/Account_Record_Type_Channel_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Organization Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Account Record Type Channel Matrix</label>
</CustomObject>